--- a/src/Languages/ar.json
+++ b/src/Languages/ar.json
@@ -22,10 +22,10 @@
   "firstStep1": "اتخذ الخطوة الأولى نحو إتقان",
   "firstStep2": "اللغة الإنجليزية",
   "firstStep3": "–  إنها مجانية!",
-  "freeSession":"احصل على جلسة فردية مجانية مع مدربينا الخبراء واكتشف كيف يمكننا مساعدتك في إتقان اللغة الإنجليزية دون عناء",
-  "L":"مستوي",
-  "Mons" : " اشهر",
-  "mon" : "شهر",
+  "freeSession": "احصل على حصة فردية مجانية مع مدربينا الخبراء واكتشف كيف يمكننا مساعدتك في إتقان اللغة الإنجليزية دون عناء",
+  "L": "مستوي",
+  "Mons": " اشهر",
+  "mon": "شهر",
   "benefits": "المزايا",
   "freeTrialSession": "حصة تجريبية مجانية لمدة 30 دقيقة",
   "personalizedFeedback": "تقييم شخصي",
@@ -51,14 +51,14 @@
     "title": "حصة مباشرة",
     "duration": "ساعتين لكل حصة",
     "alone": "ساعه لكل حصة",
-    "avalible":"متاح على مدار الساعة",
+    "avalible": "متاح على مدار الساعة",
     "sessionsPerWeek": "2-3 حصص في الأسبوع",
     "Group": "2 حصص في الأسبوع",
     "schedule": "مواعيد مسائية",
     "moreDetails": "تفاصيل أكثر"
   },
   "aboutUs": "نبذة عنا",
-  "footerDescription": "مساعدة المتعلمين على إتقان اللغة الإنجليزية من خلال دورات تدريبية موجهة من خبراء وجلسات مجانية واختبارات تحديد المستوى. مصممة لدعم رحلتك نحو الطلاقة.",
+  "footerDescription": "مساعدة المتعلمين على إتقان اللغة الإنجليزية من خلال دورات تدريبية موجهة من خبراء وحصص مجانية واختبارات تحديد المستوى. مصممة لدعم رحلتك نحو الطلاقة.",
   "privacyPolicy": "سياسة الخصوصية",
   "contentPolicy": "سياسة الاسترداد",
   "termsOfUse": "شروط الاستخدام",
@@ -151,14 +151,14 @@
   "freeTest": "اختبار مجاني",
   "freeSess": "حصة مجانية",
   "applicationSuccess": "تم تقديم الطلب بنجاح",
-  "1level":"مستوى واحد",
-  "Details":"التفاصيل",
-  "other":"أخرى",
-  "PrivacyPolicy" : "سياسة الخصوصية",
+  "1level": "مستوى واحد",
+  "Details": "التفاصيل",
+  "other": "أخرى",
+  "PrivacyPolicy": "سياسة الخصوصية",
   "TitleOne": "البيانات التي نجمعها",
   "SubOne": "قد نقوم بجمع البيانات التالية عند استخدام تطبيق 'أكاديمية إمباكت إنجلش':",
   "BodyOne": "• المعلومات الشخصية: الاسم، رقم الهاتف، البريد الإلكتروني.<br>• معلومات الحساب: بيانات تسجيل الدخول والمعلومات الشخصية.<br>• معلومات الدورات: الدورات المسجلة، التقدم، والتقييمات.<br>• معلومات الدفع: تفاصيل المعاملات وطرق الدفع (يتم معالجتها بواسطة بوابات دفع آمنة).<br>• معلومات الجهاز: نظام التشغيل ونوع المتصفح لتحسين التطبيق.",
-  
+
   "TitleTwo": "كيفية استخدام بياناتك",
   "SubTwo": "يتم استخدام بياناتك من أجل:",
   "BodyTwo": "• إدارة تسجيل الدورات وتتبع التقدم.<br>• تخصيص تجربة التعلم.<br>• معالجة المدفوعات بأمان.<br>• تحليل سلوك المستخدم وتحسين الخدمات.<br>• الامتثال للالتزامات القانونية ومنع الأنشطة الاحتيالية.",
@@ -189,21 +189,56 @@
 
   "TitleNine": "العنوان",
   "BodyNine": "حي ٦ مجاوره ٣٣ عماره ٤٥ - دمياط الجديده",
- "refundTitle" : "سياسة الاسترداد",
- "refundDec": "يمكن للطالب طلب استرداد الرسوم خلال 3 أيام من التسجيل إذا لم يتم التواصل معه من موظف خدمة العملاء لتنسيق المواعيد.<br/>يجب تقديم طلبات الاسترداد عبر قنوات دعم العملاء الرسمية.<br/>سيتم معالجة المبالغ المستردة خلال 7 أيام عمل بعد الموافقة.<br/>حالات عدم الاسترداد:<br/>- في حالة فصل الطالب نتيجة ارتكاب مخالفة أخلاقية أو نتيجة سوء سلوك تجاه زملائه الطلاب أو المدرس أو أحد موظفي الشركة.<br/>- في حالة تنسيق المواعيد بسبب حجز مكان للطالب في مجموعة أو التعاقد مع مدرس مخصوص في الموعد المتفق عليه مع الطالب في النظام الفردي.<br/>- عند بدء الدراسة ثم التوقف المفاجئ من الطالب.<br/>حلول مرنة لحل مشكلة الطالب في حالة صعوبة بدء الدراسة:<br/>يتم تقديم أكثر من حل مرن لحل مشكلة الطالب مثل عمل تجميد للمستويات المتبقية أو إرسالها لأحد الأصدقاء بشرط أن يكون مستوى جديد للطالب لم يتم بدء الدراسة فيه.<br/>قنوات الاتصال:<br/>في حال وجود شكاوى أو اقتراحات أو أي طلبات، يمكن للطلاب التواصل مع موظفي خدمة العملاء من خلال الأرقام التالية:<br/>+201091085271<br/>+201019725546<br/>في حالة تغيير الأرقام، سيتم إبلاغ الطلاب بالتحديثات اللازمة عبر وسائل الاتصال المتاحة.<br/>Email: impactacademy.25@gmail.com <br/>عنوان:<br/> ٦ مجاوره ٣٣ عماره ٤٥ - دمياط الجديده",
- "useTitle" : "نظام الدراسة في أكاديمية امباكت",  
- "usePolicy": "**التزام المدرس:**<br/>• يلتزم المدرس بتقديم كل الدعم الأكاديمي للطالب، بما في ذلك شرح المفاهيم التعليمية، توفير المنهج الدراسي، بالإضافة إلى أي مصادر تعليمية إضافية قد يحتاجها الطالب لتعزيز استفادته من الدورة التدريبية.<br/>• يتعين على المدرس متابعة تقدم الطلاب بشكل دوري وتقديم الإرشادات اللازمة لهم لضمان تحقيق أفضل أداء أكاديمي.<br/><br/>**التزام الإدارة:**<br/>• تتعهد الإدارة، من خلال موظفي خدمة العملاء، بمتابعة تطور الطلاب ومراجعة جودة الخدمة التعليمية المقدمة لهم، والتأكد من رضا الطلاب عن مستوى التعليم.<br/>• يمكن للطالب تقديم شكوى أو ملاحظات عبر موظف خدمة العملاء المسؤول عن تقديم الدعم الأكاديمي أو الإداري، وسيتم التعامل مع الشكوى بجدية وبما يتماشى مع سياسة الأكاديمية.<br/>• تلتزم الإدارة بحل أي مشكلات أو ملاحظات يقدمها الطلاب، مع مراعاة القوانين والأنظمة المعمول بها في الأكاديمية.<br/><br/>**التزام الطالب:**<br/>• يتعين على الطالب الالتزام بحضور المحاضرات في مواعيدها المحددة، وعدم الغياب أو التأخير عن الدروس. كما يجب على الطالب القيام بجميع المهام الدراسية المقررة، بما في ذلك الواجبات والأنشطة التعليمية الأخرى.<br/>• لا تتحمل الأكاديمية أي مسؤولية عن تدهور مستوى الطالب بسبب عدم التزامه بالحضور المنتظم أو بسبب الغياب أو التأخير عن المحاضرات.<br/>• يجب على الطالب الالتزام بالآداب العامة والأخلاقيات الرفيعة في تعاملاته مع المدرسين، الموظفين، وزملاء الدراسة. وفي حال حدوث أي تجاوزات من الطالب تؤثر على بيئة الدراسة أو تتعارض مع قيم الأكاديمية، قد يتم فصل الطالب من الدورة دون حق في استرداد الرسوم المدفوعة.<br/><br/>**تحديد المستوى الدراسي:**<br/>• يتم تحديد المستوى الدراسي المناسب للطالب بناءً على اختبار تحديد مستوى يُجريه مدرس ذو خبرة في المجال.<br/>• يُهدف هذا الاختبار إلى ضمان أن الطالب يبدأ دراسته من المستوى الذي يتناسب مع قدراته ومعرفته السابقة.<br/><br/>**التزام الطالب بالمشاركة الفعّالة:**<br/>• يُشترط أن يحضر الطالب جميع المحاضرات ويشارك بشكل نشط في الأنشطة الدراسية.<br/>• كما يُشترط أن يلتزم الطالب بتسليم المهام الدراسية في الوقت المحدد، وأن يحضر اختبار نهاية المستوى في الوقت المحدد له.<br/>• اجتياز اختبار نهاية المستوى بنجاح هو شرط أساسي لإتمام الدورة الدراسية وانتقال الطالب إلى المستوى التالي.<br/><br/>**المسؤولية الأكاديمية:**<br/>• إن مستوى الطالب الأكاديمي يُعتبر مسؤولية مشتركة بين الطالب والأكاديمية، حيث يُتوقع من الطالب الالتزام بالتعليمات والمواعيد الأكاديمية، بينما تقوم الأكاديمية بتوفير بيئة تعليمية مناسبة وتقديم الدعم المطلوب.<br/>• في حالة عدم التزام الطالب بالمشاركة الفعّالة، قد يتم تقييم الوضع الأكاديمي للطالب واتخاذ الإجراءات اللازمة لضمان تحسين أدائه الأكاديمي.<br/><br/>**السياسات الخاصة بالغياب والتأخير:**<br/>• في حال غياب الطالب عن أي محاضرة أو التأخير عنها، فإن الأكاديمية لا تتحمل مسؤولية تغطية المادة العلمية المفقودة، لكن يمكن للطلاب الرجوع إلى تسجيلات المحاضرات لمتابعة المحتوى الذي فاتهم.<br/>• الغياب أكثر من محاضرتين دون تقديم عذر مقبول يقلل من فرص الطالب في اجتياز المستوى الدراسي حيث يُعتبر الحضور المنتظم عاملاً مهماً في ضمان استفادة الطالب القصوى من الدورة الدراسية.<br/>• الأكاديمية تحث الطلاب على الالتزام بالحضور المنتظم والمشاركة الفعّالة لضمان التقدم الأكاديمي والمشاركة الكاملة في جميع جوانب الدورة.<br/><br/>**حقوق الأكاديمية:**<br/>• تحتفظ الأكاديمية بحقها في اتخاذ الإجراءات التأديبية بحق الطالب في حالة المخالفات المتكررة أو في حالة حدوث أي سلوك غير لائق، بما في ذلك فصل الطالب من الدورة دون استرداد الرسوم في حالة الضرورة.<br/><br/>**نظام الحضور والدراسة:**<br/><br/>**طريقة المحاضرات:**<br/>• جميع المحاضرات تُقدّم بشكل بث مباشر تفاعلي عبر برنامج زووم أو أي برنامج آخر يتم الاتفاق عليه بين الأكاديمية والطالب.<br/>• يُفضل فتح الكاميرا أثناء المحاضرات لضمان التفاعل والمشاركة الفعّالة.<br/>• يتم تسجيل المحاضرات لجميع الطلاب بحيث يمكن الرجوع إليها لاحقاً لمتابعة المحتوى المفقود أو للمراجعة.<br/><br/>**تنظيم المجموعات والدروس الفردية:**<br/>• يتكون المستوى من 10 محاضرات، حيث تكون مدة المحاضرة تتراوح بين ساعة إلى ساعتين، حسب عدد الطلاب في المجموعة ويتم تحديد المدة بناءً على ما يتناسب مع المحتوى المقرر للمحاضرة من المدرس.<br/>• يتم تحديد مواعيد ثابتة للمجموعات لا يمكن تغييرها بعد بدء الدورة، إلا في حالة الانتقال إلى مستوى آخر أو إذا تم إبلاغ الأكاديمية مسبقاً والتنسيق مع الطلاب الحاليين.<br/>• يتم إنشاء جروب تليجرام أو واتساب للطلاب لاستلام روابط الحضور، تسجيلات المحاضرات، وتحديثات الدورة، ويظل هذا الجروب متاحاً للطالب طوال حياته الأكاديمية مع الأكاديمية.<br/><br/>**الدورات الفردية:**<br/>• تتكون الدورة من 10 حصص، مدة الحصة ساعة واحدة، ويُحدد موعد المحاضرات بعد إجراء اختبار تحديد المستوى لتنسيق مواعيد الحصص وفقاً لجدول الطالب.<br/>• يتم أيضًا إنشاء جروب تليجرام أو واتساب خاص بالدورات الفردية بنفس أهداف المجموعات الجماعية.<br/><br/>**تفعيل الاشتراك:**<br/>• يُعتبر الاشتراك في الدورة فعالاً بدءاً من أول محاضرة في الدورة، وينتهي مع آخر محاضرة في نفس المستوى الدراسي.<br/><br/>**سياسة إلغاء الحصص في النظام الفردي:**<br/>• في حال رغب الطالب في إلغاء محاضرة فردية، يجب إبلاغ الأكاديمية قبل 4 ساعات على الأقل من موعد الحصة.<br/>• إذا لم يُبلغ الطالب الأكاديمية أو إذا لم يحضر في الموعد المحدد دون إبلاغ مسبق، سيتم احتساب تلك الحصة ضمن حصصه المقررة.<br/><br/>**قنوات الاتصال:**<br/>• في حال وجود شكاوى أو اقتراحات أو أي طلبات، يمكن للطلاب التواصل مع موظفي خدمة العملاء من خلال الأرقام التالية:<br/>+201091085271<br/>+201019725546<br/>• في حالة تغيير الأرقام، سيتم إبلاغ الطلاب بالتحديثات اللازمة عبر وسائل الاتصال المتاحة.<br/>• Email: impactacademy.25@gmail.com<br/>• عنوان: حي ٦ مجاوره ٣٣ عماره ٤٥ - دمياط الجديدة.<br/><br/>**ملحوظات إضافية:**<br/>• يُشجّع الطلاب على التواصل المستمر مع الأكاديمية للحصول على استفساراتهم أو مشورتهم بشأن أي جزء من الدورة.<br/>• الأكاديمية تعمل على توفير بيئة تعليمية محفزة وآمنة لجميع الطلاب، ونحن نحرص على تقديم تعليم ذو جودة عالية يتماشى مع أفضل المعايير الأكاديمية.",
-  "ad" : "حي ٦ مجاوره ٣٣ عماره ٤٥ - دمياط الجديده",
-  "aboutDecOne" : "توجيه فردي من مدربين خبراء.",
-  "aboutDectwo" : "تمارين تحدث واستماع في الوقت الفعلي.",
-  "aboutDecthree" :"تقييمات منتظمة لقياس التحسن.",
-  "aboutDecfour" :"تجارب تعلم مخصصة مصممة لتتناسب مع أسلوبك الفريد، سرعتك، وأهدافك.",
-"insOne" : "حنين داوود",
-"insTwo" : "فاطمة حامد ",
-"insThree" : "ندى فتحي",
-"insFour" : "شذا المصلحي",
-"insFive" :  "مازن ياسر",
-"insSix" : "هنادي جابر",
-"loading" : " لحظه من فضلك ",
-"payment" : "طرق الدفع"
+  "refundTitle": "سياسة الاسترداد",
+  "refundDec": "يمكن للطالب طلب استرداد الرسوم خلال 3 أيام من التسجيل إذا لم يتم التواصل معه من موظف خدمة العملاء لتنسيق المواعيد.<br/>يجب تقديم طلبات الاسترداد عبر قنوات دعم العملاء الرسمية.<br/>سيتم معالجة المبالغ المستردة خلال 7 أيام عمل بعد الموافقة.<br/>حالات عدم الاسترداد:<br/>- في حالة فصل الطالب نتيجة ارتكاب مخالفة أخلاقية أو نتيجة سوء سلوك تجاه زملائه الطلاب أو المدرس أو أحد موظفي الشركة.<br/>- في حالة تنسيق المواعيد بسبب حجز مكان للطالب في مجموعة أو التعاقد مع مدرس مخصوص في الموعد المتفق عليه مع الطالب في النظام الفردي.<br/>- عند بدء الدراسة ثم التوقف المفاجئ من الطالب.<br/>حلول مرنة لحل مشكلة الطالب في حالة صعوبة بدء الدراسة:<br/>يتم تقديم أكثر من حل مرن لحل مشكلة الطالب مثل عمل تجميد للمستويات المتبقية أو إرسالها لأحد الأصدقاء بشرط أن يكون مستوى جديد للطالب لم يتم بدء الدراسة فيه.<br/>قنوات الاتصال:<br/>في حال وجود شكاوى أو اقتراحات أو أي طلبات، يمكن للطلاب التواصل مع موظفي خدمة العملاء من خلال الأرقام التالية:<br/>+201091085271<br/>+201019725546<br/>في حالة تغيير الأرقام، سيتم إبلاغ الطلاب بالتحديثات اللازمة عبر وسائل الاتصال المتاحة.<br/>Email: impactacademy.25@gmail.com <br/>عنوان:<br/> ٦ مجاوره ٣٣ عماره ٤٥ - دمياط الجديده",
+  "useTitle": "نظام الدراسة في أكاديمية امباكت",
+  "usePolicy": "**التزام المدرس:**<br/>• يلتزم المدرس بتقديم كل الدعم الأكاديمي للطالب، بما في ذلك شرح المفاهيم التعليمية، توفير المنهج الدراسي، بالإضافة إلى أي مصادر تعليمية إضافية قد يحتاجها الطالب لتعزيز استفادته من الدورة التدريبية.<br/>• يتعين على المدرس متابعة تقدم الطلاب بشكل دوري وتقديم الإرشادات اللازمة لهم لضمان تحقيق أفضل أداء أكاديمي.<br/><br/>**التزام الإدارة:**<br/>• تتعهد الإدارة، من خلال موظفي خدمة العملاء، بمتابعة تطور الطلاب ومراجعة جودة الخدمة التعليمية المقدمة لهم، والتأكد من رضا الطلاب عن مستوى التعليم.<br/>• يمكن للطالب تقديم شكوى أو ملاحظات عبر موظف خدمة العملاء المسؤول عن تقديم الدعم الأكاديمي أو الإداري، وسيتم التعامل مع الشكوى بجدية وبما يتماشى مع سياسة الأكاديمية.<br/>• تلتزم الإدارة بحل أي مشكلات أو ملاحظات يقدمها الطلاب، مع مراعاة القوانين والأنظمة المعمول بها في الأكاديمية.<br/><br/>**التزام الطالب:**<br/>• يتعين على الطالب الالتزام بحضور المحاضرات في مواعيدها المحددة، وعدم الغياب أو التأخير عن الدروس. كما يجب على الطالب القيام بجميع المهام الدراسية المقررة، بما في ذلك الواجبات والأنشطة التعليمية الأخرى.<br/>• لا تتحمل الأكاديمية أي مسؤولية عن تدهور مستوى الطالب بسبب عدم التزامه بالحضور المنتظم أو بسبب الغياب أو التأخير عن المحاضرات.<br/>• يجب على الطالب الالتزام بالآداب العامة والأخلاقيات الرفيعة في تعاملاته مع المدرسين، الموظفين، وزملاء الدراسة. وفي حال حدوث أي تجاوزات من الطالب تؤثر على بيئة الدراسة أو تتعارض مع قيم الأكاديمية، قد يتم فصل الطالب من الدورة دون حق في استرداد الرسوم المدفوعة.<br/><br/>**تحديد المستوى الدراسي:**<br/>• يتم تحديد المستوى الدراسي المناسب للطالب بناءً على اختبار تحديد مستوى يُجريه مدرس ذو خبرة في المجال.<br/>• يُهدف هذا الاختبار إلى ضمان أن الطالب يبدأ دراسته من المستوى الذي يتناسب مع قدراته ومعرفته السابقة.<br/><br/>**التزام الطالب بالمشاركة الفعّالة:**<br/>• يُشترط أن يحضر الطالب جميع المحاضرات ويشارك بشكل نشط في الأنشطة الدراسية.<br/>• كما يُشترط أن يلتزم الطالب بتسليم المهام الدراسية في الوقت المحدد، وأن يحضر اختبار نهاية المستوى في الوقت المحدد له.<br/>• اجتياز اختبار نهاية المستوى بنجاح هو شرط أساسي لإتمام الدورة الدراسية وانتقال الطالب إلى المستوى التالي.<br/><br/>**المسؤولية الأكاديمية:**<br/>• إن مستوى الطالب الأكاديمي يُعتبر مسؤولية مشتركة بين الطالب والأكاديمية، حيث يُتوقع من الطالب الالتزام بالتعليمات والمواعيد الأكاديمية، بينما تقوم الأكاديمية بتوفير بيئة تعليمية مناسبة وتقديم الدعم المطلوب.<br/>• في حالة عدم التزام الطالب بالمشاركة الفعّالة، قد يتم تقييم الوضع الأكاديمي للطالب واتخاذ الإجراءات اللازمة لضمان تحسين أدائه الأكاديمي.<br/><br/>**السياسات الخاصة بالغياب والتأخير:**<br/>• في حال غياب الطالب عن أي محاضرة أو التأخير عنها، فإن الأكاديمية لا تتحمل مسؤولية تغطية المادة العلمية المفقودة، لكن يمكن للطلاب الرجوع إلى تسجيلات المحاضرات لمتابعة المحتوى الذي فاتهم.<br/>• الغياب أكثر من محاضرتين دون تقديم عذر مقبول يقلل من فرص الطالب في اجتياز المستوى الدراسي حيث يُعتبر الحضور المنتظم عاملاً مهماً في ضمان استفادة الطالب القصوى من الدورة الدراسية.<br/>• الأكاديمية تحث الطلاب على الالتزام بالحضور المنتظم والمشاركة الفعّالة لضمان التقدم الأكاديمي والمشاركة الكاملة في جميع جوانب الدورة.<br/><br/>**حقوق الأكاديمية:**<br/>• تحتفظ الأكاديمية بحقها في اتخاذ الإجراءات التأديبية بحق الطالب في حالة المخالفات المتكررة أو في حالة حدوث أي سلوك غير لائق، بما في ذلك فصل الطالب من الدورة دون استرداد الرسوم في حالة الضرورة.<br/><br/>**نظام الحضور والدراسة:**<br/><br/>**طريقة المحاضرات:**<br/>• جميع المحاضرات تُقدّم بشكل بث مباشر تفاعلي عبر برنامج زووم أو أي برنامج آخر يتم الاتفاق عليه بين الأكاديمية والطالب.<br/>• يُفضل فتح الكاميرا أثناء المحاضرات لضمان التفاعل والمشاركة الفعّالة.<br/>• يتم تسجيل المحاضرات لجميع الطلاب بحيث يمكن الرجوع إليها لاحقاً لمتابعة المحتوى المفقود أو للمراجعة.<br/><br/>**تنظيم المجموعات والدروس الفردية:**<br/>• يتكون المستوى من 10 محاضرات، حيث تكون مدة المحاضرة تتراوح بين ساعة إلى ساعتين، حسب عدد الطلاب في المجموعة ويتم تحديد المدة بناءً على ما يتناسب مع المحتوى المقرر للمحاضرة من المدرس.<br/>• يتم تحديد مواعيد ثابتة للمجموعات لا يمكن تغييرها بعد بدء الدورة، إلا في حالة الانتقال إلى مستوى آخر أو إذا تم إبلاغ الأكاديمية مسبقاً والتنسيق مع الطلاب الحاليين.<br/>• يتم إنشاء جروب تليجرام أو واتساب للطلاب لاستلام روابط الحضور، تسجيلات المحاضرات، وتحديثات الدورة، ويظل هذا الجروب متاحاً للطالب طوال حياته الأكاديمية مع الأكاديمية.<br/><br/>**الدورات الفردية:**<br/>• تتكون الدورة من 10 حصص، مدة الحصة ساعة واحدة، ويُحدد موعد المحاضرات بعد إجراء اختبار تحديد المستوى لتنسيق مواعيد الحصص وفقاً لجدول الطالب.<br/>• يتم أيضًا إنشاء جروب تليجرام أو واتساب خاص بالدورات الفردية بنفس أهداف المجموعات الجماعية.<br/><br/>**تفعيل الاشتراك:**<br/>• يُعتبر الاشتراك في الدورة فعالاً بدءاً من أول محاضرة في الدورة، وينتهي مع آخر محاضرة في نفس المستوى الدراسي.<br/><br/>**سياسة إلغاء الحصص في النظام الفردي:**<br/>• في حال رغب الطالب في إلغاء محاضرة فردية، يجب إبلاغ الأكاديمية قبل 4 ساعات على الأقل من موعد الحصة.<br/>• إذا لم يُبلغ الطالب الأكاديمية أو إذا لم يحضر في الموعد المحدد دون إبلاغ مسبق، سيتم احتساب تلك الحصة ضمن حصصه المقررة.<br/><br/>**قنوات الاتصال:**<br/>• في حال وجود شكاوى أو اقتراحات أو أي طلبات، يمكن للطلاب التواصل مع موظفي خدمة العملاء من خلال الأرقام التالية:<br/>+201091085271<br/>+201019725546<br/>• في حالة تغيير الأرقام، سيتم إبلاغ الطلاب بالتحديثات اللازمة عبر وسائل الاتصال المتاحة.<br/>• Email: impactacademy.25@gmail.com<br/>• عنوان: حي ٦ مجاوره ٣٣ عماره ٤٥ - دمياط الجديدة.<br/><br/>**ملحوظات إضافية:**<br/>• يُشجّع الطلاب على التواصل المستمر مع الأكاديمية للحصول على استفساراتهم أو مشورتهم بشأن أي جزء من الدورة.<br/>• الأكاديمية تعمل على توفير بيئة تعليمية محفزة وآمنة لجميع الطلاب، ونحن نحرص على تقديم تعليم ذو جودة عالية يتماشى مع أفضل المعايير الأكاديمية.",
+  "ad": "حي ٦ مجاوره ٣٣ عماره ٤٥ - دمياط الجديده",
+  "aboutDecOne": "توجيه فردي من مدربين خبراء.",
+  "aboutDectwo": "تمارين تحدث واستماع في الوقت الفعلي.",
+  "aboutDecthree": "تقييمات منتظمة لقياس التحسن.",
+  "aboutDecfour": "تجارب تعلم مخصصة مصممة لتتناسب مع أسلوبك الفريد، سرعتك، وأهدافك.",
+  "insOne": "حنين داوود",
+  "insTwo": "فاطمة حامد ",
+  "insThree": "ندى فتحي",
+  "insFour": "شذا المصلحي",
+  "insFive": "مازن ياسر",
+  "insSix": "هنادي جابر",
+  "loading": " لحظه من فضلك ",
+  "payment": "طرق الدفع",
+  "categories": {
+    "sessionType": {
+      "online": "حصة مباشرة",
+      "recorded": "حصة مسجلة",
+      "both": "حصص مباشرة ومسجلة"
+    },
+    "scheduleType": {
+      "night": "مواعيد مسائية",
+      "morning": "مواعيد صباحية",
+      "24/7": "متاح على مدار الساعة"
+    },
+    "hoursPerSession": { "one": "ساعة لكل حصة", "more": "ساعات لكل حصة" },
+    "sessionsPerWeek": {
+      "one": "حصة في الأسبوع",
+      "more": "حصص في الأسبوع"
+    },
+    "moreDetails": "تفاصيل أكثر"
+  },
+  "level": "مستوى",
+  "levels": "مستويات",
+  "session": "حصة",
+  "sessions": "حصص",
+  "month": "شهر",
+  "months": "أشهر",
+  "student": " طالب",
+  "students": " طلاب",
+  "validation": {
+    "nameRequired": "الاسم مطلوب",
+    "emailRequired": "البريد الإلكتروني مطلوب",
+    "invalidEmail": "البريد الإلكتروني غير صالح",
+    "phoneRequired": "رقم الهاتف مطلوب",
+    "invalidPhone": "رقم الهاتف غير صالح",
+    "countryRequired": "الدولة مطلوبة",
+    "courseCategoryRequired": "فئة الدورة مطلوبة"
+  }
 }
