free Session Implementation

--- a/src/Languages/ar.json
+++ b/src/Languages/ar.json
@@ -232,8 +232,23 @@
   "months": "أشهر",
   "student": " طالب",
   "students": " طلاب",
+  "age": "العمر",
+  "chooseAge": "اختر عمرك",
+  "chooseTimeSlot": "اختر موعد الجلسة المناسب",
+  "timeSlot": "الوقت المفضل",
+  "booking": "يتم الحجز...",
+  "bookSession": "احجز حصة",
+  "bookFreeSession": "احجز حصة مجانية",
+  "selectDateAndTime": "اختر التاريخ والوقت",
+  "selectedSlot": "الموعد المختار",
+  "changeSlot": "تغيير الموعد",
+
   "validation": {
     "nameRequired": "الاسم مطلوب",
+    "nameTooShort": "الاسم قصير جداً",
+    "nameTooLong": "الاسم طويل جداً",
+    "ageRequired": "العمر مطلوب",
+    "timeSlotRequired": "الوقت مطلوب",
     "emailRequired": "البريد الإلكتروني مطلوب",
     "invalidEmail": "البريد الإلكتروني غير صالح",
     "phoneRequired": "رقم الهاتف مطلوب",
