--- a/src/Languages/en.json
+++ b/src/Languages/en.json
@@ -235,8 +235,23 @@
   "months": "Months",
   "student": "Student",
   "students": "Students",
+  "age": "Age",
+  "chooseAge": "Choose your age",
+  "timeSlot": "Session Time",
+  "chooseTimeSlot": "Choose your preferred time",
+  "bookFreeSession": "Book a Free Session",
+  "booking": "Booking...",
+  "bookSession": "Book Session",
+  "selectDateAndTime": "Select Date & Time",
+  "selectedSlot": "Selected Slot",
+  "changeSlot": "Change Slot",
+
   "validation": {
     "required": "This field is required",
+    "nameTooShort": "Name is too short",
+    "nameTooLong": "Name is too long",
+    "ageRequired": "Age is required",
+    "timeSlotRequired": "Time slot is required",
     "nameRequired": "Name is required",
     "emailRequired": "Email is required",
     "phoneRequired": "Phone number is required",
