user free session + free test

--- a/src/Languages/ar.json
+++ b/src/Languages/ar.json
@@ -148,7 +148,7 @@
   "OurAchievements": "إنجازاتنا",
   "OurAchievementsDescription": "تم إنشاء منصتنا لمساعدة الأشخاص على تحقيق الطلاقة في اللغة الإنجليزية، والاتصال عالميًا، والوصول إلى فرص جديدة، بقيادة معلمين مكرسين لجعل التعلم في متناول الجميع.",
   "chooseOption": "اختر خيارك",
-  "freeTest": "اختبار مجاني",
+  "FreeTest": "اختبار مجاني",
   "freeSess": "حصة مجانية",
   "applicationSuccess": "تم تقديم الطلب بنجاح",
   "1level": "مستوى واحد",
@@ -242,6 +242,21 @@
   "selectDateAndTime": "اختر التاريخ والوقت",
   "selectedSlot": "الموعد المختار",
   "changeSlot": "تغيير الموعد",
+  "loadingSlots": "جاري تحميل المواعيد المتاحة...",
+  "failedToLoadSlots": "فشل في تحميل المواعيد",
+  "timeSlotForm": {
+    "one": "موعد",
+    "other": "مواعيد"
+  },
+  "available": "متاح",
+  "noSlots": "لا توجد مواعيد",
+  "availableSlotsFor": "المواعيد المتاحة ل",
+  "changeDate": "تغيير التاريخ",
+  "noSlotsForDate": "لا توجد مواعيد متاحة لهذا التاريخ",
+  "scrollHorizontalHint": "اسحب أفقيًا لرؤية المزيد من التواريخ",
+  "kid": "طفل (6-12)",
+  "teen": "مراهق (13-17)",
+  "adult": "بالغ (18+)",
 
   "validation": {
     "nameRequired": "الاسم مطلوب",
@@ -255,5 +270,148 @@
     "invalidPhone": "رقم الهاتف غير صالح",
     "countryRequired": "الدولة مطلوبة",
     "courseCategoryRequired": "فئة الدورة مطلوبة"
+  },
+
+  "bookingSubmitted": "تم تقديم الحجز بنجاح!",
+  "bookingPendingConfirmation": "تم استلام حجز الجلسة المجانية وهو في انتظار التأكيد. يرجى التحقق من بريدك الإلكتروني لتأكيد حجزك.",
+  "checkYourEmail": "تحقق من بريدك الإلكتروني",
+  "confirmationEmailSent": "لقد أرسلنا رابط تأكيد إلى عنوان بريدك الإلكتروني. انقر على الرابط لتأكيد حجزك.",
+  "bookingDetails": "تفاصيل الحجز",
+  "sessionTime": "موعد الجلسة",
+  "important": "مهم",
+  "checkSpamFolder": "تحقق من مجلد الرسائل غير المرغوب فيها إذا لم ترى البريد الإلكتروني",
+  "confirmWithin24Hours": "يرجى تأكيد حجزك خلال 24 ساعة",
+  "contactSupportIfNoEmail": "اتصل بالدعم إذا لم تستلم البريد الإلكتروني خلال 5 دقائق",
+  "backToHome": "العودة إلى الرئيسية",
+  "viewMyBookings": "عرض حجوزاتي",
+  "needHelp": "تحتاج مساعدة؟",
+  "contactSupport": "اتصل بالدعم",
+
+  "bookingConfirmed": "تم تأكيد الحجز!",
+  "bookingConfirmedFor": "تم تأكيد جلستك المجانية، {name}! نحن متحمسون لرؤيتك.",
+  "bookingConfirmedGeneric": "تم تأكيد جلستك المجانية! نحن متحمسون لرؤيتك.",
+  "allSet": "أنت جاهز!",
+  "seeYouAtSession": "سنراك في جلستك المجدولة. سيتم إرسال تذكير قبل جلستك.",
+  "whatsNext": "ماذا بعد؟",
+  "receiveReminder": "ستستلم بريدًا إلكترونيًا للتذكير قبل 24 ساعة من جلستك",
+  "joinOnTime": "انضم إلى الجلسة في الوقت المحدد باستخدام الرابط الذي سنوفره",
+  "bringMaterials": "احضر أي مواد تود مناقشتها",
+  "questionsAboutSession": "أسئلة حول جلستك؟",
+
+  "bookingCancelled": "تم إلغاء الحجز",
+  "bookingCancelledFor": "تم إلغاء جلستك المجانية، {name}.",
+  "bookingCancelledGeneric": "تم إلغاء جلستك المجانية.",
+  "cancellationComplete": "تم الإلغاء بنجاح",
+  "slotAvailableForOthers": "هذا الموعد متاح الآن للطلاب الآخرين.",
+  "weMissYou": "سنشتاق إليك!",
+  "hopeToSeeYouAgain": "نأمل أن نراك في جلسة مستقبلية. لا تتردد في الحجز مرة أخرى في أي وقت!",
+  "bookAnotherSession": "احجز جلسة أخرى",
+  "changeYourMind": "غيرت رأيك؟",
+
+  "freeTest": {
+    "warning": {
+      "title": "ملاحظة هامة",
+      "message": "يرجى عدم تحديث الصفحة أو استخدام زر الرجوع في المتصفح أثناء الاختبار. سيتم فقدان تقدمك إذا غادرت هذه الصفحة."
+    },
+    "welcome": {
+      "title": "اختبار اللغة الإنجليزية المجاني",
+      "description": "اكتشف مستواك في اللغة الإنجليزية في 20 - 25 دقيقة فقط مع اختبارنا التكيفي. احصل على نتائج دقيقة وتوصيات دورات مخصصة.",
+      "quick": "سريع",
+      "minutes": " 20 دقيقة",
+      "accurate": "دقيق",
+      "levelDetection": "كشف المستوى",
+      "free": "مجاني",
+      "noCost": "بدون تكلفة",
+      "startTestNow": "ابدأ الاختبار الآن",
+      "startingTest": "جاري بدء الاختبار...",
+      "continueTest": "تابع اختبارك",
+      "continueTestDescription": "وجدنا اختبارًا غير مكتمل. يمكنك متابعة من حيث توقفت.",
+      "continueTestNote": "تم حفظ تقدمك السابق",
+      "privacyNote": "معلوماتك آمنة وسيتم استخدامها فقط لتقديم نتائج اختبارك.",
+      "alreadyCompleted": "لقد أكملت بالفعل اختبارًا مجانيًا. يرجى الاتصال بالدعم إذا كنت بحاجة إلى إعادة الاختبار.",
+      "contactSupport": "اتصل بالدعم لإعادة الاختبار"
+    },
+    "questions": {
+      "question": "سؤال",
+      "of": "من",
+      "selectAnswer": "الرجاء اختيار إجابة للمتابعة",
+      "nextQuestion": "السؤال التالي",
+      "finishLevel": "إنهاء المستوى",
+      "submitting": "جاري الإرسال...",
+      "listenCarefully": "استمع جيدًا للصوت",
+      "noAudioForThisQuestion": "لا يوجد صوت متاح لهذا السؤال"
+    },
+    "progress": {
+      "currentLevel": "المستوى الحالي",
+      "complete": "مكتمل",
+      "starter": "مبتدئ",
+      "basic1": "أساسي 1",
+      "basic2": "أساسي 2",
+      "level1": "المستوى 1",
+      "level2": "المستوى 2",
+      "level3": "المستوى 3",
+      "level4": "المستوى 4",
+      "level5": "المستوى 5",
+      "level6": "المستوى 6",
+      "level7": "المستوى 7",
+      "level8": "المستوى 8",
+      "level9": "المستوى 9"
+    },
+    "transition": {
+      "levelUp": "تقدم في المستوى!",
+      "greatProgress": "تقدم رائع!",
+      "readyForNextLevel": "أنت تبدو رائعًا! مستعد للمستوى التالي؟",
+      "continueToLevel": "المتابعة إلى",
+      "continue": "متابعة",
+      "wellDone": "أحسنت! استمر في العمل الجيد."
+    },
+    "completion": {
+      "testComplete": "تم الانتهاء من الاختبار!",
+      "congratulations": "مبروك على إكمال تقييمك للغة الإنجليزية",
+      "yourEnglishLevel": "مستواك في اللغة الإنجليزية",
+      "correctAnswers": "الإجابات الصحيحة",
+      "recommendedCourse": "الدورة الموصى بها",
+      "perfectScore": "ممتاز! نتيجة مثالية!",
+      "wellDone": "أحسنت! أداء رائع!",
+      "goodJob": "عمل جيد! أنت على الطريق الصحيح!",
+      "testLinkedToBooking": "تم ربط نتائج اختبارك بحجز الجلسة المجانية.",
+      "bookFreeSession": "احجز جلسة مجانية",
+      "viewMyBookings": "عرض حجوزاتي",
+      "detailedResults": "عرض النتائج التفصيلية",
+      "retakeTest": "إعادة الاختبار",
+      "loadingResults": "جاري تحميل نتائجك...",
+      "goHome": "الذهاب للصفحة الرئيسية"
+    },
+    "audio": {
+      "audioLoading": "جاري تحميل الصوت...",
+      "playingAudio": "جاري التشغيل...",
+      "playAudio": "انقر للاستماع",
+      "audioError": "خطأ في الصوت",
+      "tryAgain": "حاول مرة أخرى",
+      "noAudioAvailable": "لا يوجد صوت متاح",
+      "replayAudio": "إعادة تشغيل الصوت",
+      "audioNotSupported": "متصفحك لا يدعم عنصر الصوت."
+    },
+    "errors": {
+      "nameRequired": "الاسم مطلوب",
+      "emailRequired": "البريد الإلكتروني مطلوب",
+      "invalidEmail": "الرجاء إدخال بريد إلكتروني صحيح",
+      "phoneRequired": "رقم الهاتف مطلوب",
+      "countryRequired": "البلد مطلوب",
+      "allFieldsRequired": "جميع الحقول مطلوبة",
+      "testNotFound": "الاختبار غير موجود",
+      "testCompleted": "الاختبار مكتمل بالفعل",
+      "submissionFailed": "فشل في إرسال الإجابات"
+    },
+    "form": {
+      "name": "الاسم",
+      "enterName": "أدخل اسمك",
+      "email": "البريد الإلكتروني",
+      "enterEmail": "أدخل بريدك الإلكتروني",
+      "phoneNumber": "رقم الهاتف",
+      "enterPhoneNumber": "أدخل رقم هاتفك",
+      "country": "البلد",
+      "chooseCountry": "اختر بلدك"
+    }
   }
 }
