--- a/src/Languages/en.json
+++ b/src/Languages/en.json
@@ -147,7 +147,7 @@
   "OurAchievements": "Our Achievements",
   "OurAchievementsDescription": "Our platform was created to help people achieve English fluency, connect globally, and access new opportunities, driven by educators dedicated to making learning accessible for all.",
   "chooseOption": "Choose Option",
-  "freeTest": "Free Test",
+  "FreeTest": "Free Test",
   "freeSess": "Free Session",
   "applicationSuccess": "Application Submitted Successfully",
   "1level": "1 Level",
@@ -245,6 +245,21 @@
   "selectDateAndTime": "Select Date & Time",
   "selectedSlot": "Selected Slot",
   "changeSlot": "Change Slot",
+  "loadingSlots": "Loading available time slots...",
+  "failedToLoadSlots": "Failed to load time slots",
+  "timeSlotForm": {
+    "one": "time slot",
+    "other": "time slots"
+  },
+  "available": "Available",
+  "noSlots": "No slots",
+  "availableSlotsFor": "Available slots for",
+  "changeDate": "Change date",
+  "noSlotsForDate": "No available slots for this date",
+  "scrollHorizontalHint": "Scroll horizontally to see more dates",
+  "kid": "Kid (6-12)",
+  "teen": "Teen (13-17)",
+  "adult": "Adult (18+)",
 
   "validation": {
     "required": "This field is required",
@@ -260,5 +275,148 @@
     "minLength": "Minimum length is {{min}} characters",
     "maxLength": "Maximum length is {{max}} characters",
     "mustBeTrue": "You must accept this field"
+  },
+
+  "bookingSubmitted": "Booking Submitted Successfully!",
+  "bookingPendingConfirmation": "Your free session booking has been received and is pending confirmation. Please check your email to confirm your booking.",
+  "checkYourEmail": "Check your email",
+  "confirmationEmailSent": "We've sent a confirmation link to your email address. Click the link to confirm your booking.",
+  "bookingDetails": "Booking Details",
+  "sessionTime": "Session Time",
+  "important": "Important",
+  "checkSpamFolder": "Check your spam folder if you don't see the email",
+  "confirmWithin24Hours": "Please confirm your booking within 24 hours",
+  "contactSupportIfNoEmail": "Contact support if you don't receive the email within 5 minutes",
+  "backToHome": "Back to Home",
+  "viewMyBookings": "View My Bookings",
+  "needHelp": "Need help?",
+  "contactSupport": "Contact Support",
+
+  "bookingConfirmed": "Booking Confirmed!",
+  "bookingConfirmedFor": "Your free session has been confirmed, {name}! We're excited to see you.",
+  "bookingConfirmedGeneric": "Your free session has been confirmed! We're excited to see you.",
+  "allSet": "You're all set!",
+  "seeYouAtSession": "We'll see you at your scheduled session. A reminder will be sent before your session.",
+  "whatsNext": "What's Next?",
+  "receiveReminder": "You'll receive a reminder email 24 hours before your session",
+  "joinOnTime": "Join the session on time using the link we'll provide",
+  "bringMaterials": "Bring any materials you'd like to discuss",
+  "questionsAboutSession": "Questions about your session?",
+
+  "bookingCancelled": "Booking Cancelled",
+  "bookingCancelledFor": "Your free session has been cancelled, {name}.",
+  "bookingCancelledGeneric": "Your free session has been cancelled.",
+  "cancellationComplete": "Cancellation complete",
+  "slotAvailableForOthers": "This time slot is now available for other students.",
+  "weMissYou": "We'll miss you!",
+  "hopeToSeeYouAgain": "We hope to see you in a future session. Feel free to book again anytime!",
+  "bookAnotherSession": "Book Another Session",
+  "changeYourMind": "Change your mind?",
+
+  "freeTest": {
+    "warning": {
+      "title": "Important Notice",
+      "message": "Please do not refresh the page or use the browser's back button during the test. Your progress will be lost if you navigate away from this page."
+    },
+    "welcome": {
+      "title": "Free English Test",
+      "description": "Discover your English level in just 20 - 25 minutes with our adaptive test. Get accurate results and personalized course recommendations.",
+      "quick": "Quick",
+      "minutes": "20 minutes",
+      "accurate": "Accurate",
+      "levelDetection": "Level detection",
+      "free": "Free",
+      "noCost": "No cost",
+      "startTestNow": "Start Test Now",
+      "startingTest": "Starting Test...",
+      "continueTest": "Continue Your Test",
+      "continueTestDescription": "We found an incomplete test. You can continue where you left off.",
+      "continueTestNote": "Your previous progress has been saved",
+      "privacyNote": "Your information is secure and will only be used to provide your test results.",
+      "alreadyCompleted": "You have already completed a free test. Please contact support if you need to retake it.",
+      "contactSupport": "Contact support to retake test"
+    },
+    "questions": {
+      "question": "Question",
+      "of": "of",
+      "selectAnswer": "Please select an answer to continue",
+      "nextQuestion": "Next Question",
+      "finishLevel": "Finish Level",
+      "submitting": "Submitting...",
+      "listenCarefully": "Listen carefully to the audio",
+      "noAudioForThisQuestion": "No audio available for this question"
+    },
+    "progress": {
+      "currentLevel": "Current Level",
+      "complete": "complete",
+      "starter": "Starter",
+      "basic1": "Basic 1",
+      "basic2": "Basic 2",
+      "level1": "Level 1",
+      "level2": "Level 2",
+      "level3": "Level 3",
+      "level4": "Level 4",
+      "level5": "Level 5",
+      "level6": "Level 6",
+      "level7": "Level 7",
+      "level8": "Level 8",
+      "level9": "Level 9"
+    },
+    "transition": {
+      "levelUp": "Level Up!",
+      "greatProgress": "Great Progress!",
+      "readyForNextLevel": "You're doing great! Ready for the next level?",
+      "continueToLevel": "Continue to",
+      "continue": "Continue",
+      "wellDone": "Well done! Keep up the good work."
+    },
+    "completion": {
+      "testComplete": "Test Complete!",
+      "congratulations": "Congratulations on completing your English assessment",
+      "yourEnglishLevel": "Your English Level",
+      "correctAnswers": "Correct Answers",
+      "recommendedCourse": "Recommended Course",
+      "perfectScore": "Excellent! Perfect score!",
+      "wellDone": "Well done! Great performance!",
+      "goodJob": "Good job! You're on the right track!",
+      "testLinkedToBooking": "Your test results have been linked to your free session booking.",
+      "bookFreeSession": "Book Free Session",
+      "viewMyBookings": "View My Bookings",
+      "detailedResults": "View Detailed Results",
+      "retakeTest": "Take Test Again",
+      "loadingResults": "Loading your results...",
+      "goHome": "Go To Home Page"
+    },
+    "audio": {
+      "audioLoading": "Loading audio...",
+      "playingAudio": "Playing...",
+      "playAudio": "Click to play",
+      "audioError": "Audio error",
+      "tryAgain": "Try again",
+      "noAudioAvailable": "No audio available",
+      "replayAudio": "Replay audio",
+      "audioNotSupported": "Your browser does not support the audio element."
+    },
+    "errors": {
+      "nameRequired": "Name is required",
+      "emailRequired": "Email is required",
+      "invalidEmail": "Please enter a valid email address",
+      "phoneRequired": "Phone number is required",
+      "countryRequired": "Country is required",
+      "allFieldsRequired": "All fields are required",
+      "testNotFound": "Test not found",
+      "testCompleted": "Test already completed",
+      "submissionFailed": "Failed to submit answers"
+    },
+    "form": {
+      "name": "Name",
+      "enterName": "Enter your name",
+      "email": "Email",
+      "enterEmail": "Enter your email",
+      "phoneNumber": "Phone Number",
+      "enterPhoneNumber": "Enter your phone number",
+      "country": "Country",
+      "chooseCountry": "Choose your country"
+    }
   }
 }
