bug fixes, client edits

--- a/src/Languages/ar.json
+++ b/src/Languages/ar.json
@@ -348,8 +348,8 @@
       "currentLevel": "المستوى الحالي",
       "complete": "مكتمل",
       "starter": "مبتدئ",
-      "basic1": "أساسي 1",
-      "basic2": "أساسي 2",
+      "basic1": "تأسيس 1",
+      "basic2": "تأسيس 2",
       "level1": "المستوى 1",
       "level2": "المستوى 2",
       "level3": "المستوى 3",
