--- a/src/Languages/ar.json
+++ b/src/Languages/ar.json
@@ -240,6 +240,7 @@
   "booking": "يتم الحجز...",
   "bookSession": "احجز حصة",
   "bookFreeSession": "احجز حصة مجانية",
+  "bookFreeSessionDesc": "سجّل بياناتك واحجز حصة مجانية للتعرّف على نظام التدريس، تجربة أسلوب الشرح، وتحديد المستوى المناسب لك قبل بدء التعلم.",
   "selectDateAndTime": "اختر التاريخ والوقت",
   "selectedSlot": "الموعد المختار",
   "changeSlot": "تغيير الموعد",
